--- a/htmlReport/index_SORT_BY_NAME_DESC.html
+++ b/htmlReport/index_SORT_BY_NAME_DESC.html
@@ -87,7 +87,7 @@ Current scope:     all classes
 </th>
 </tr>
   <tr>
-    <td class="name"><a href="ns-3/index_SORT_BY_NAME_DESC.html">com.movieApp.moviesService.movies</a></td>
+    <td class="name"><a href="ns-3/index_SORT_BY_NAME_DESC.html">com.movieApp.moviesService.service</a></td>
 <td class="coverageStat">
   <span class="percent">
     50%
