--- a/htmlReport/ns-3/sources/source-4.html
+++ b/htmlReport/ns-3/sources/source-4.html
@@ -19,7 +19,7 @@
 <div class="breadCrumbs">
 Current scope:     <a href="../../index.html">all classes</a>
     <span class="separator">|</span>
-    <a href="../index.html">com.movieApp.moviesService.movies</a>
+    <a href="../index.html">com.movieApp.moviesService.service</a>
 </div>
 
 <h1>Coverage Summary for Class: MoviesRepository (com.movieApp.moviesService.movies)</h1>
